[tool.poetry]
name = "censusify-philly"
version = "0.1.0"
description = ""
authors = ["Stephen Suffian <stephen.suffian@pm.me>"]
packages= [{include="services"}]

[tool.poetry.dependencies]
python = "^3.10"
census = "^0.8.19"
Shapely = "^1.8.4"
pandas = "^1.5.0"
httpx = "^0.23.0"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.5.0"
matplotlib = "^3.6.2"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
